--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "dedoc/scramble": "^0.10.13",
         "doctrine/dbal": "^4.0",
+        "laravel-notification-channels/fcm": "^4.3",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
