--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "dedoc/scramble": "^0.10.13",
         "doctrine/dbal": "^4.0",
+        "eightynine/filament-excel-import": "^3.1",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.2.0",
         "laravel-notification-channels/fcm": "^4.3",
